tests/typing/bad/testfile-local-2.c

int main() { struct S x; }

